--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -19,7 +19,7 @@
     <input class="user-id" type="text" placeholder="ID">
     <input class="user-pw" type="password" placeholder="PW">
     <div class="frm-inner-wrap">
-      <label class="check-box-label">Remember <input class="re-check" type="checkbox"></label>
+      <label class="check-box-label">Remember ID <input class="re-check" type="checkbox"></label>
       <a class="forgot-pw" href="#">Forgot Password?</a>
     </div>
     <button class="login-btn" type="button">Submit</button>
